Fixed horizontal scrolling issue for modal

--- a/css/custom.css
+++ b/css/custom.css
@@ -39,7 +39,7 @@
 }
 
 .modal-body {
-  overflow-x: scroll;
+  overflow-x: auto;
 }
 
 .modal-field {
